; ModuleID = '/home/carl/AnghaBench/openssl/crypto/pkcs12/extr_p12_sbag.c_PKCS12_SAFEBAG_create_pkcs8_encrypt.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/pkcs12/extr_p12_sbag.c_PKCS12_SAFEBAG_create_pkcs8_encrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @PKCS12_SAFEBAG_create_pkcs8_encrypt(i32 %0, i8* %1, i32 %2, i8* %3, i32 %4, i32 %5, i32* %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i32*, align 8
  store i32 %0, i32* %9, align 4
  store i8* %1, i8** %10, align 8
  store i32 %2, i32* %11, align 4
  store i8* %3, i8** %12, align 8
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32* %6, i32** %15, align 8
  %19 = load i32, i32* %9, align 4
  %20 = call i32* @EVP_get_cipherbynid(i32 %19)
  store i32* %20, i32** %17, align 8
  %21 = load i32*, i32** %17, align 8
  %22 = icmp ne i32* %21, null
  br i1 %22, label %23, label %24

23:                                               ; preds = %7
  store i32 -1, i32* %9, align 4
  br label %24

24:                                               ; preds = %23, %7
  %25 = load i32, i32* %9, align 4
  %26 = load i32*, i32** %17, align 8
  %27 = load i8*, i8** %10, align 8
  %28 = load i32, i32* %11, align 4
  %29 = load i8*, i8** %12, align 8
  %30 = load i32, i32* %13, align 4
  %31 = load i32, i32* %14, align 4
  %32 = load i32*, i32** %15, align 8
  %33 = call i32* @PKCS8_encrypt(i32 %25, i32* %26, i8* %27, i32 %28, i8* %29, i32 %30, i32 %31, i32* %32)
  store i32* %33, i32** %18, align 8
  %34 = load i32*, i32** %18, align 8
  %35 = icmp eq i32* %34, null
  br i1 %35, label %36, label %37

36:                                               ; preds = %24
  store i32* null, i32** %8, align 8
  br label %47

37:                                               ; preds = %24
  %38 = load i32*, i32** %18, align 8
  %39 = call i32* @PKCS12_SAFEBAG_create0_pkcs8(i32* %38)
  store i32* %39, i32** %16, align 8
  %40 = load i32*, i32** %16, align 8
  %41 = icmp eq i32* %40, null
  br i1 %41, label %42, label %45

42:                                               ; preds = %37
  %43 = load i32*, i32** %18, align 8
  %44 = call i32 @X509_SIG_free(i32* %43)
  br label %45

45:                                               ; preds = %42, %37
  %46 = load i32*, i32** %16, align 8
  store i32* %46, i32** %8, align 8
  br label %47

47:                                               ; preds = %45, %36
  %48 = load i32*, i32** %8, align 8
  ret i32* %48
}

declare dso_local i32* @EVP_get_cipherbynid(i32) #1

declare dso_local i32* @PKCS8_encrypt(i32, i32*, i8*, i32, i8*, i32, i32, i32*) #1

declare dso_local i32* @PKCS12_SAFEBAG_create0_pkcs8(i32*) #1

declare dso_local i32 @X509_SIG_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
